2009-09-01  Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-global-props-tests.md: Add test for field table.

2009-09-01  Rodrigo Kumpera  <rkumpera@novell.com>

	* gen-md-tests.c: Add suppport for badrt mode for metadata
	tests that require runtime type initialization.

	* Makefile: Add support for badrt.

2009-09-01  Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-global-props-tests.md: Add test for typeref table.

	* cli-tables-tests.md: Disable test that pass under MS.

2009-08-29  Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-global-props-tests.md: New tests for global
	properties to check tables for.

	* Makefile: Add new test source.

2009-08-26  Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: Regression test for #534189

2009-07-29 Rodrigo Kumpera  <rkumpera@novell.com>

	* Makefile: Fix mac build and dependencies.
	Add new file.

	* cli-blob-tests.md: stand-alone-method-sig tests now use
	a separate input file with a single standalone sig so it's
	no longer dependent on ilasm ordering.

	* assembly-with-calli.il: New file with a single standalone
	signature.

2009-07-20 Rodrigo Kumpera  <rkumpera@novell.com>

	* assembly-with-locals.il: Fix method to be verifiable.
	Add more shapes of valid locals.

	* cli-blob-tests.md (locals-sig): Fix some tests.

2009-06-26 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: Fix a cattr-table test
	where generic param is allowed as a parent.

2009-06-19 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: Fix a implmap-table test
	related to SupportLastError.

2009-06-18 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-blob-tests.md: Last tests for method header.

2009-06-18 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-blob-tests.md: Tests for method header.

	* assembly-with-methods.cs: Fill in more methods
	with EH tables.

2009-06-16 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-blob-tests.md: Tests for method header.

	* assembly-with-methods.cs: Add some body to