@@ -1,0 +1,22 @@
+using System;
+
+public class Type0
+{
+	int a,b;
+
+	public static void Main ()
+	{
+	}
+}
+
+public class Type1
+{
+	int a;
+	static int b;
+}
+
+public class Type2
+{
+	int a;
+	double b;
+}
