@@ -1,5 +1,11 @@
 2009-09-01  Rodrigo Kumpera  <rkumpera@novell.com>
 
+	* assembly-with-fields.cs: New test source.
+
+	* Makefile: Add test source
+
+2009-09-01  Rodrigo Kumpera  <rkumpera@novell.com>
+
 	* cli-global-props-tests.md: Add test for field table.
 
 2009-09-01  Rodrigo Kumpera  <rkumpera@novell.com>
